# chess-game

./: .gitignore  CMakeLists.txt  CMakelists.txt  todo.txt
src/: CMakeLists.txt  game.cpp  game.hpp  level.cpp  level.hpp  main.cpp  piece.cpp  render.hpp  square.cpp  square.hpp
src/ctrl/: CMakeLists.txt  level.cpp  level.hpp  piece.cpp  piece.hpp  square.cpp  square.hpp
src/ctrl/pieces/: CMakeLists.txt  bishop.cpp  bishop.hpp  horse.cpp  horse.hpp  king.cpp  king.hpp  pawn.cpp  pawn.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp
src/gui/: CMakeLists.txt  game.cpp  game.hpp  render.cpp  render.hpp
